toList() changed